fuel-chain-config/src/snapshots/fuel_chain_config__chain_config__tests__snapshot_simple_coin_state.snap
---
source: fuel-chain-config/src/chain_config.rs
expression: json
---
{
  "chain_name": "local_testnet",
  "block_production": "Instant",
  "initial_state": {
    "coins": [
      {
        "tx_id": "0x61644a25da5ad31754e23bc1eca8c766a61ceaa8c60ddc65f158a30209256e35",
        "output_index": "0xe46d13fb359a76c9",
        "block_created": "0x000000007f55f4a4",
        "maturity": "0x0000000063f8fe17",
        "owner": "0xa2d8d9ed086c0f3f03f94ec89a67bfdc6a1e22b69d667e5ac8055d00a3f57027",
        "amount": "0x0d1865b14bc80dbc",
        "asset_id": "0x0d053242a9719dca480b4f4910fa60671f2068086498c72e30fc8b969e083932"
      }
    ]
  },
  "transaction_parameters": {
    "contract_max_size": 16777216,
    "max_inputs": 255,
    "max_outputs": 255,
    "max_witnesses": 255,
    "max_gas_per_tx": 100000000,
    "max_script_length": 1048576,
    "max_script_data_length": 1048576,
    "max_storage_slots": 255,
    "max_predicate_length": 1048576,
    "max_predicate_data_length": 1048576,
    "gas_price_factor": 1000000000,
    "gas_per_byte": 4,
    "max_message_data_length": 1048576
  }
}
